# itms1

./: HARDWARE_SIMULATION_GUIDE.md  README.md  bill_of_materials.md  component_specifications.md  data_logging_format.md  docker-compose.yml  scaling_recommendations.md
backend/: Dockerfile  env.example  itms.db  requirements.txt
backend/app/: config.py  db.py  main.py  models.py  realtime.py  schemas.py  utils.py
backend/app/routers/: admin.py  measurements.py  reports.py  video.py
docs/: README.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/js/: app.js  charts.js  map.js  websocket.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CameraInterface.tsx  EnhancedGPSMap.tsx  Footer.tsx  GPSMap.tsx  HardwareControl.tsx  HeroSection.tsx  LoadingSpinner.tsx  Navbar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  EnhancedDashboard.tsx  HomePage.tsx  LandingPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TestPage.tsx
frontend/styles/: components.css  dashboard.css  main.css
hardware/: pinout.md
pico_firmware/: CMakeLists.txt  main.c
scripts/: hardware_simulator.py  pico_reader.py  sensor_simulator.py  simple_simulator.py
